--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.6.5",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "add": "^2.0.6",
     "babel-eslint": "^10.1.0",
     "formik": "^2.1.4",
     "i18next": "^19.5.1",
@@ -36,6 +38,7 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-persist": "^6.0.0",
+    "yarn": "^1.22.4",
     "yup": "^0.29.1"
   },
   "devDependencies": {
