--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.6.5",
+    "@react-native-firebase/app": "^8.1.0",
+    "@react-native-firebase/firestore": "^7.4.1",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "add": "^2.0.6",
