Fixing IOS calculator

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.6.5",
+    "@react-native-community/toolbar-android": "^0.1.0-rc.2",
     "@react-native-firebase/app": "^8.1.0",
     "@react-native-firebase/firestore": "^7.4.1",
     "@react-navigation/native": "^5.6.1",
@@ -26,6 +27,7 @@
     "intl": "^1.2.5",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
+    "native-base": "^2.13.12",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-i18next": "^11.7.0",
